# markets-data-hub

./: .gitignore  LICENSE  README.md  dagster_cloud.yaml  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: branch_deployments.yml  deploy.yml  pages.yml  update-data.yml
.tmp_dagster_home_sf4o62m_/history/: runs.db
.tmp_dagster_home_sf4o62m_/history/runs/: .db  d0df376b-ab83-468d-bb0a-c1cd7ae5540e.db  index.db
.tmp_dagster_home_sf4o62m_/schedules/: schedules.db
frontend/: index.html  package-lock.json  package.json
frontend/public/data/: bonds_data.json  cert_data.json  learning_data.json  riksbankscertifikat.csv  scb_rates_data.json  statsobligationer_sgb.csv  statsobligationer_sgb_il.csv  swestr_data.json
frontend/src/: App.css  App.jsx
frontend/src/components/: BondsSection.jsx  CertificateSection.jsx  ErrorBoundary.jsx  Header.jsx  LearningSection.jsx  ScbRatesSection.jsx  StatCard.jsx  SwestrSection.jsx
scripts/: build_data.py  fetch_data.py
src/markets_data_hub/: definitions.py
src/markets_data_hub.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/markets_data_hub/assets/: assets.py  frontend.py  schemas.py  sync.py
src/markets_data_hub/data/: Finjusterade_transaktioner.xlsx  deposit_rates.parquet  mortgage_rates.parquet  nfc_lending_rates.parquet  policy_rate_values.parquet  rb_cert_auctions_result.parquet  ref_rgk.xlsx  sales_of_government_bonds.parquet  swestr_values.parquet
src/markets_data_hub/notebooks/: analysis.py
src/markets_data_hub/utils/: constants.py  (+1 more)
tests/: test_assets.py  test_defs.py  test_scb.py
(+4 files in other folders)
