[project]
name = "markets_data_hub"
requires-python = ">=3.10,<3.15"
version = "0.1.0"
dependencies = [
    "dagster",
    "dagster-cloud",
    "requests",
    "beautifulsoup4",
    "polars",
    "pydantic",
    "marimo",
    "altair>=6.0.0",
]

[dependency-groups]
dev = [
    "dagster-dg-cli>=1.11.11",
    "dagster-webserver",
    "pytest",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.dagster]
module_name = "markets_data_hub.definitions"
code_location_name = "markets_data_hub"

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "markets_data_hub"
